--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# pip install --no-build-isolation -i https://pypi.tuna.tsinghua.edu.cn/simple
 Cython==0.29.21
 librosa==0.9.2
 matplotlib==3.3.1
@@ -5,9 +6,9 @@ scikit-learn==1.0.2
 scipy
 numpy==1.21.6
 tensorboard
-torch
-torchvision
-torchaudio
+--find-links https://download.pytorch.org/whl/torch_stable.html torch==2.0.1+cu118
+--find-links https://download.pytorch.org/whl/torch_stable.html torchvision==0.15.2+cu118
+--find-links https://download.pytorch.org/whl/torch_stable.html torchaudio==2.0.2+cu118
 unidecode
 pyopenjtalk==0.1.3
 jamo
