--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
 # pip install --no-build-isolation -i https://pypi.tuna.tsinghua.edu.cn/simple
 Cython==0.29.21
 librosa==0.9.2
-matplotlib==3.3.1
-scikit-learn==1.0.2
 scipy
-numpy==1.21.6
 tensorboard
 --find-links https://download.pytorch.org/whl/torch_stable.html torch==2.0.1+cu118
 --find-links https://download.pytorch.org/whl/torch_stable.html torchvision==0.15.2+cu118
 --find-links https://download.pytorch.org/whl/torch_stable.html torchaudio==2.0.2+cu118
 unidecode
-pyopenjtalk==0.1.3
 jamo
 pypinyin
 jieba
@@ -25,3 +21,8 @@ opencc==1.1.1
 demucs
 openai-whisper
 gradio
+# manual install
+# numpy
+# pyopenjtalk==0.2.0
+# scikit-learn==1.0.2
+# matplotlib==3.3.1
